# scouting

./: .firebaserc  .gitignore  firebase.json  firestore.rules  index.html  package-lock.json  package.json  readme copy.md  readme.md  styles.css  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: update_data.yaml
api/: README.md  supabase-client.ts  tsconfig.json  uploadqrdata.ts
archive/: LICENSE  package-lock.json  package.json  readme.md
archive/js/: script.js
archive/public/: index.html
archive/src/: ContextProvider.tsx  Data.tsx  DataEntry.tsx  theme.ts
express/: index.ts
functions/: package-lock.json
functions/src/: index.ts
public/: index.html  manifest.json  output.css
src/: AllianceSwitch.tsx  App.tsx  App.vue  Auto.tsx  Chooser.tsx  ClimbSelector.tsx  CompetitionSelector.tsx  ContextProvider.tsx  CustomCheckbox.tsx  Data.tsx  DataEntry.tsx  DataGraphs.tsx  EventTeams.tsx  NavBar.tsx  PositionChooser.tsx  Post.tsx  PreMatch.tsx  ScoreCounter.tsx  ScoutingContexts.tsx  SettingsPage.tsx  TeamSelector.tsx  Tele.tsx  index.tsx  main.ts  theme.ts  types.ts
src/Components/: Chooser.tsx  ClimbSelector.tsx  CompetitionSelector.tsx  CustomCheckbox.tsx  MultiAutoComplete.tsx  NavBar.tsx  ScoreCounter.tsx  TeamSelector.tsx  TrapSelector.tsx
src/DataViz/: AllAveragesGraph.tsx  AverageTeamGraph.tsx  FullTeamGraph.tsx  TeamGraph.tsx  (+3 more)
util/: credentials.py  data.csv  data.json  event_info.py  example_private_credentials.json  main.py  offline_data.py  public_credentials.py  pyproject.toml  supabase_client_interface.py  tba_client.py
(+98 files in other folders)
